Fix android dark mode

--- a/global.css
+++ b/global.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-	.root {
+	.root,
+	:root {
 		--background: 0 0% 100%;
 		--foreground: 240 10% 3.9%;
 		--card: 0 0% 100%;
@@ -25,7 +26,8 @@
 		--ring: 240 5.9% 10%;
 	}
 
-	.dark-root {
+	.dark-root,
+	.dark:root {
 		--background: 240 10% 3.9%;
 		--foreground: 0 0% 98%;
 		--card: 240 10% 3.9%;
